# romea-ros2-mobile-base

./: .gitlab-ci.yml  AUTHORS  README.md  romea_mobile_base.repos  romea_mobile_base_public.repos  romea_odo.rosinstall
romea_mobile_base/: CMakeLists.txt  package.xml
romea_mobile_base_bringup/: CMakeLists.txt  README.md  package.xml
romea_mobile_base_bringup/launch/: mobile_base.launch.py
romea_mobile_base_bringup/python/: romea_mobile_base_bringup.py
romea_mobile_base_bringup/scripts/: urdf_description.py
romea_mobile_base_bringup/test/: test_mobile_base_bringup.py  test_mobile_base_bringup.yaml  test_urdf_description.py
romea_mobile_base_controllers/: CMakeLists.txt  README.md  package.xml  plugins.xml
romea_mobile_base_controllers/launch/: diff_drive_controller.launch.py  mobile_base_controller.launch.py
romea_mobile_base_controllers/scripts/: spawner  spawner.py
romea_mobile_base_controllers/src/: controller_interface1FAS2FWD.cpp  controller_interface1FAS2RWD.cpp  controller_interface1FWS2RWD.cpp  controller_interface2AS4WD.cpp  controller_interface2FWS2FWD.cpp  controller_interface2FWS2RWD.cpp  controller_interface2FWS4WD.cpp  controller_interface2WD.cpp  controller_interface4WD.cpp  controller_interface4WS4WD.cpp  dead_reckoning.cpp  dead_reckoning_publisher.cpp  enhanced_odometry_controller.cpp  joint_controller_interface.cpp  mobile_base_controller.cpp  mobile_base_enhanced_controller.cpp  spinning_joint_controller_interface.cpp  steering_joint_controller_interface.cpp
romea_mobile_base_controllers/test/: CMakeLists.txt  test_controller_interface1FAS2FWD.cpp  test_controller_interface1FAS2RWD.cpp  test_controller_interface1FWS2RWD.cpp  test_controller_interface2AS4WD.cpp  test_controller_interface2FWS2FWD.cpp  test_controller_interface2FWS2FWD.cpp.autosave  test_controller_interface2FWS2RWD.cpp  test_controller_interface2FWS4WD.cpp  test_controller_interface2TD.cpp  test_controller_interface2WD.cpp  test_controller_interface4WD.cpp  test_controller_interface4WS4WD.cpp  test_spinning_joint_controller_interface.cpp  test_steering_joint_controller_interface.cpp
romea_mobile_base_description/: CMakeLists.txt  README.md  package.xml
romea_mobile_base_description/config/: urdf.rviz
romea_mobile_base_description/launch/: view_robot.launch.py  view_robot.launch.xml
romea_mobile_base_description/python/: romea_mobile_base_description.py
romea_mobile_base_description/ros2_control/: 1FAS_2FWD.ros2_control.xacro  1FAS_2RWD.ros2_control.xacro  1FAS_4WD.ros2_control.xacro  1FWS_2RWD.ros2_control.xacro  2AS_4WD.ros2_control.xacro  2FWS_2RWD.ros2_control.xacro  2FWS_4WD.ros2_control.xacro  2RWS_4WD.ros2_control.xacro  2TD.ros2_control.xacro  2THD.ros2_control.xacro  2TTD.ros2_control.xacro  4WD.ros2_control.xacro  4WS_4WD.ros2_control.xacro  base1FAS2FWD.ros2_control.xacro  base1FAS2RWD.ros2_control.xacro  base1FAS4WD.ros2_control.xacro  base2AS2FWD.ros2_control.xacro  base2AS2RWD.ros2_control.xacro  base2AS4WD.ros2_control.xacro  base2FWS2FWD.ros2_control.xacro  base2FWS2RWD.ros2_control.xacro  base2FWS4WD.ros2_control.xacro  base2RWS4WD.ros2_control.xacro  base2TD.ros2_control.xacro  base2THD.ros2_control.xacro  base2TTD.ros2_control.xacro  base4WD.ros2_control.xacro  base4WS4WD.ros2_control.xacro
romea_mobile_base_description/test/: test_mobile_base_description.py  test_mobile_base_parameters_1FAS2FWD.yaml  test_mobile_base_parameters_1FAS2RWD.yaml  test_mobile_base_parameters_1FAS4WD.yaml  test_mobile_base_parameters_2AS2FWD.yaml  test_mobile_base_parameters_2AS2RWD.yaml  test_mobile_base_parameters_2AS4WD.yaml  test_mobile_base_parameters_2FWS2FWD.yaml  test_mobile_base_parameters_2FWS2RWD.yaml  test_mobile_base_parameters_2FWS4WD.yaml  test_mobile_base_parameters_2TD.yaml  test_mobile_base_parameters_2WD.yaml  test_mobile_base_parameters_4WD.yaml  test_mobile_base_parameters_4WS4WD.yaml
romea_mobile_base_description/urdf/: 1RAS_4WD_chassis.xacro  2AS_4WD_chassis.xacro  2FWS_4WD_chassis.xacro  2RWS_4WD_chassis.xacro  2TD.xacro  2THD.xacro  2TTD.xacro  4WD_chassis.xacro  axle_steering.xacro  base1FAS4WD.chassis.xacro  base1FASxxx.chassis.xacro  base1RAS4WD.chassis.xacro  base2ASxxx.chassis.xacro  base2FWSxxx.chassis.xacro  base2RWS4WD.chassis.xacro  base2TD.chassis.xacro  base2THD.chassis.xacro  base2TTD.chassis.xacro  base4WD.chassis.xacro  base4WS4WD.chassis.xacro  common.xacro  wheel.xacro  wheel_steered.xacro
romea_mobile_base_gazebo/: CMakeLists.txt  package.xml  plugins.xml
romea_mobile_base_gazebo/src/: gazebo_interface1FAS2RWD.cpp  gazebo_interface1FASxxx.cpp  gazebo_interface1FWS2RWD.cpp  gazebo_interface2AS4WD.cpp  gazebo_interface2ASxxx.cpp  gazebo_interface2FWS2FWD.cpp  gazebo_interface2FWS2RWD.cpp  gazebo_interface2FWS4WD.cpp  gazebo_interface2FWSxxx.cpp  gazebo_interface2TD.cpp  gazebo_interface2THD.cpp  gazebo_interface2TTD.cpp  gazebo_interface2WD.cpp  gazebo_interface4WD.cpp  gazebo_interface4WS4WD.cpp  gazebo_interface_base.cpp  gazebo_system_interface.cpp  odometry_hardware_interface1FAS2FWD.cpp.autosave  spinning_joint_gazebo_interface.cpp  steering_joint_gazebo_interface.cpp
romea_mobile_base_gazebo/test/: CMakeLists.txt  test_gazebo_interface1FASxxx.cpp  test_gazebo_interface1FASxxx.xacro  test_gazebo_interface2ASxxx.cpp  test_gazebo_interface2ASxxx.xacro  test_gazebo_interface2FWSxxx.cpp  test_gazebo_interface2FWSxxx.xacro  test_gazebo_interface2TD.cpp  test_gazebo_interface2TD.xacro  test_gazebo_interface2THD.cpp  test_gazebo_interface2THD.xacro  test_gazebo_interface2TTD.cpp  (+6 more)
romea_mobile_base_gazebo_classic/: CMakeLists.txt  README.md  package.xml
romea_mobile_base_hardware/: CMakeLists.txt  README.md  package.xml  plugins.xml
romea_mobile_base_msgs/: CMakeLists.txt  package.xml
romea_mobile_base_simulation/: CMakeLists.txt  README.md  package.xml  plugins.xml
romea_mobile_base_utils/: CMakeLists.txt  package.xml
romea_odo/: CMakeLists.txt  package.xml
romea_odo_description/: CMakeLists.txt  package.xml
romea_odo_msgs/: CMakeLists.txt  package.xml
romea_odo_utils/: CMakeLists.txt  package.xml
(+429 files in other folders)
