<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>romea_mobile_base_gazebo_classic</name>
  <version>0.0.0</version>
  <description>Package containing mobile base gazebo plugins</description>

  <maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>

  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>romea_core_common</depend>
  <depend>romea_core_mobile_base</depend>
  <depend>romea_common_utils</depend>
  <depend>romea_mobile_base_utils</depend>
  <depend>romea_mobile_base_hardware</depend>
  <depend>romea_mobile_base_simulation</depend>
  <depend>hardware_interface</depend>
  <depend condition="$ROS_DISTRO &lt;= iron">gazebo_dev</depend>
  <depend condition="$ROS_DISTRO &lt;= iron">gazebo_ros</depend>
  <depend condition="$ROS_DISTRO &lt;= iron">gazebo_ros2_control</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros2_control plugin="${prefix}/plugins.xml" />
  </export>


</package>