<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>romea_mobile_base_utils</name>
  <version>0.0.0</version>
  <description>Package romea_mobile_base_utils description</description>

  <author email="jean.laneurit@inrae.fr">Jean Laneurit</author>
  <maintainer email="jean.laneurit@inrae.fr">Jean Laneurit</maintainer>

  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>romea_core_common</depend>
  <depend>romea_core_mobile_base</depend>
  <depend>romea_common_utils</depend>
  <depend>romea_mobile_base_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>four_wheel_steering_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>romea_cmd_mux_msgs</depend>
  <depend>romea_cmd_mux_utils</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
